update author attributes part 2

--- a/docs/de-de/modules/business-entscheidungen/pages/dein-vertrag.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/dein-vertrag.adoc
@@ -2,7 +2,7 @@
 :keywords: Konto, Mein Konto, Vertrag, Verträge, plentymarkets Vertrag, plentymarkets-Vertrag, Mein Vertrag, Service-Center, Service-Centre, Service Center, Service Centre, Tarif, Tarifwechsel, Tarif wechseln, Edition, Editionwechsel, Edition wechseln, Mandant, Mandant buchen, Webshop buchen, Konfigurator, kündigen, plentymarkets kündigen, Vertrag kündigen, Vertrag beenden, Vertragsende, Kündigung, DSGVO, Agentur, Agenturen, Zugang, Zugriff, Verrechnungskonto, Verrechnungskonto Guthaben, Verrechnungskonto einsehen, Support-Hotline, Support Hotline, Hotline, Support-PIN, Support PIN, PIN
 :description: Lerne, wie du auf den Mein Konto-Bereich zugreifst und Änderungen an deinem plentymarkets-Vertrag vornimmst.
 :id: ZGJLXUS
-:author: team-cloud, team-bi
+:author: team-cloud, team-app-bi
 
 Im Menü *plentymarkets Logo (Start) » Mein Konto* findest du Informationen zu deinem plentymarkets System. Du kannst Änderungen an den hier gespeicherten Informationen selbst vornehmen.
 In diesem Menü kannst du zum Beispiel:
