--- a/docs/de-de/modules/business-entscheidungen/pages/durchschnittliche-anzahl-auftragspositionen.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/durchschnittliche-anzahl-auftragspositionen.adoc
@@ -1,7 +1,7 @@
 = Durchschnittliche Anzahl der Auftragspositionen
 :keywords: Durchschnitt, Anzahl Auftragspositionen, Menge Auftragspositionen, Auftragspositionsmenge, Auftragspositionsanzahl, Business Intelligence, Statistik, Statistiken, Kennzahl, Kennzahlen, Dashboard
 :id: E5VUVYW
-:author: team-order-core, team-bi
+:author: team-order-core, team-app-bi
 
 :kennzahl: Durchschnittliche Anzahl der Auftragspositionen
 
