--- a/docs/de-de/modules/business-entscheidungen/pages/reports.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/reports.adoc
@@ -3,4 +3,4 @@
 :keywords: Report, Rohdaten
 :description: Erfahre, wie du Rohdaten exportierst.
 :id: AZ5LGXN
-:author: team-bi
+:author: team-app-bi
