--- a/docs/de-de/modules/business-entscheidungen/pages/retourenquote.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/retourenquote.adoc
@@ -1,7 +1,7 @@
 = Retourenquote
 :keywords: Retourenquote, Retourenumsatz, Umsatz Retoure, Retourenquote Umsatz, Retourenanzahl, Business Intelligence, Statistik, Statistiken, Kennzahl, Kennzahlen, Dashboard
 :id: O7KBCB0
-:author: team-order-core, team-bi
+:author: team-order-core, team-app-bi
 
 :kennzahl: Retourenquote
 
