--- a/docs/de-de/modules/business-entscheidungen/pages/rohertrag.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/rohertrag.adoc
@@ -1,7 +1,7 @@
 = Rohertrag
 :keywords: Rohertrag, Business Intelligence, Statistik, Statistiken, Kennzahl, Kennzahlen, Dashboard
 :id: MYYD7IM
-:author: team-order-core, team-bi
+:author: team-order-core, team-app-bi
 
 :kennzahl: Rohertrag
 
