--- a/docs/de-de/modules/business-entscheidungen/pages/umsatzsteuer-gesamt.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/umsatzsteuer-gesamt.adoc
@@ -1,7 +1,7 @@
 = Umsatzsteuer gesamt
 :keywords: Umsatzsteuer, Umsatzsteuer gesamt, Umsatzsteuerbetrag, Gesamtbetrag, Umsatzsteuergesamtbetrag, Steuerbetrag, Business Intelligence, Statistik, Statistiken, Kennzahl, Kennzahlen, Dashboard
 :id: W464CF4
-:author: team-order-core, team-bi
+:author: team-order-core, team-app-bi
 
 :kennzahl: Umsatzstsuer gesamt
 
