--- a/docs/de-de/modules/business-entscheidungen/pages/versandumsatz.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/versandumsatz.adoc
@@ -1,7 +1,7 @@
 = Versandumsatz
 :keywords: Versandumsatz, Brutto-Versandumsatz, Netto-Versandumsatz, Brutto-Versand, Netzto-Versand, Versandkosten, Versandkosten gesamt, Business Intelligence, Statistik, Statistiken, Kennzahl, Kennzahlen, Dashboard
 :id: HDE116B
-:author: team-order-core, team-bi
+:author: team-order-core, team-app-bi
 
 :kennzahl: Versandumsatz
 
