--- a/docs/en-gb/modules/business-decisions/pages/gross-revenue.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/gross-revenue.adoc
@@ -1,7 +1,7 @@
 = Gross revenue
 :keywords: Revenue, gross revenue, Business Intelligence, BI, statistics, key figure, key figures, Dashboard
 :id: MYYD7IM
-:author: team-order-core, team-bi
+:author: team-order-core, team-app-bi
 
 :key-figure: Gross revenue
 
