--- a/docs/en-gb/modules/business-decisions/pages/orderdocuments-en_gb.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/orderdocuments-en_gb.adoc
@@ -2,7 +2,7 @@
 :keywords: orderDocuments, report, raw data
 :page-aliases: orderdocuments.adoc
 :id: KUJ96F4
-:author: team-docs-automation, team-bi
+:author: team-docs-automation, team-app-bi
 
 :dataFormat: pass:quotes[*orderDocuments*]
 :data: order documents
