--- a/docs/en-gb/modules/business-decisions/pages/orders-key-figure.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/orders-key-figure.adoc
@@ -1,7 +1,7 @@
 = Orders
 :keywords: orders, number of orders, quantity, quantity of orders, Business Intelligence, BI, statistics, key figure, key figures, Dashboard
 :id: D2IR751
-:author: team-order-core, team-bi
+:author: team-order-core, team-app-bi
 
 :key-figure: Orders
 
