--- a/docs/en-gb/modules/business-decisions/pages/shipping-revenue.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/shipping-revenue.adoc
@@ -1,7 +1,7 @@
 = Shipping revenue
 :keywords: shipping revenue, shipping costs, total of shipping costs, gross shipping sales, net shipping sales, Business Intelligence, BI, statistics, key figure, key figures, Dashboard
 :id: HDE116B
-:author: team-order-core, team-bi
+:author: team-order-core, team-app-bi
 
 :key-figure: Shipping revenue
 
