--- a/docs/de-de/modules/business-entscheidungen/pages/datenformate.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/datenformate.adoc
@@ -3,4 +3,4 @@
 :keywords: Rohdaten Datenformate
 :description: Erfahre, welche Datenformate dir für den Export von Rohdaten in plentymarkets zur Verfügung stehen.
 :id: 9IQX4QW
-:author: team-bi
+:author: team-app-bi
