--- a/docs/de-de/modules/business-entscheidungen/pages/kennzahlen.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/kennzahlen.adoc
@@ -3,4 +3,4 @@
 :keywords: Kennzahl, Kennzahlen Liste, plenty BI Kennzahlen, plentyBI Kennzahlen
 :description: Hier findest du Referenzmaterial zu allen Kennzahlen, die im plentyBI-Tool enthalten sind.
 :id: WGTAT45
-:author: team-bi
+:author: team-app-bi
