--- a/docs/de-de/modules/business-entscheidungen/pages/myview-dashboard.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/myview-dashboard.adoc
@@ -1,7 +1,7 @@
 = Dashboard
 :keywords: BI Dashboard, plentyBI, plenty BI Dashboard, Business Intelligence, Kennzahlen anlegen, Kennzahlen darstellen, Kachel, Kacheln, Tortendiagramm, Tortendiagramme, Liniendiagramm, Liniendiagramme, Säulendiagramm, Säulendiagramme, Heatmap, Heatmaps, Tacho-Diagramm, Tacho-Diagramme, Tachodiagramm, Tachodiagramme, Baumdiagramm
 :id: QPO2ICG
-:author: team-bi
+:author: team-app-bi
 
 In der schnelllebigen Welt des Onlinehandels ist es entscheidend, stets den Überblick über die Zahlen und Daten deines Online-Business zu behalten. Damit du als Onlinehändler:in immer auf die aktuellen Kennzahlen deines Unternehmens zugreifen kannst und somit direkt siehst, wo Handlungsbedarf besteht, bietet plentymarkets dir das neue Dashboard. Hier kannst du zahlreiche Kennzahlen, Statistiken, Diagrammtypen und Formatierungen miteinander kombinieren. So richtest du dir flexibel und individuell genau das Dashboard ein, das du brauchst.
 
