--- a/docs/de-de/modules/daten/pages/statistiken.adoc
+++ b/docs/de-de/modules/daten/pages/statistiken.adoc
@@ -2,7 +2,7 @@
 :keywords: Statistik, Statistik exportieren, Deckungsbeitrag 1, Deckungsbeitrag 2, Deckungsbeitrag I, Deckungsbeitrag II, Deckungsbeiträge, Prozesse Statistik, Aufträge Statistik, Artikel Statistik, Lager Statistik, Kunden Statistik, Besucher Statistik, Umsatz Statistik, Retourengründe Statistik, Renner, Penner, Statistik auswerten, Statistik exportieren, Statistik verwalten 
 :description: Erfahre, wie du das Statistikmodul in plentymarkets verwendest.
 :id: MSLDK1U
-:author: team-bi
+:author: team-app-bi
 
 
 [IMPORTANT]
