--- a/docs/en-gb/modules/business-decisions/pages/average-number-of-order-items.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/average-number-of-order-items.adoc
@@ -1,7 +1,7 @@
 = Average number of order items
 :keywords: order items, quantity sold, average, average number of order items, Business Intelligence, BI, statistics, key figure, key figures, Dashboard
 :id: E5VUVYW
-:author: team-order-core, team-bi
+:author: team-order-core, team-app-bi
 
 :key-figure: Average number of order items
 
