--- a/docs/en-gb/modules/business-decisions/pages/average-order-value.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/average-order-value.adoc
@@ -1,7 +1,7 @@
 = Average order value
 :keywords: average, average order value, order value, orders, quantity of orders, Business Intelligence, BI, statistics, key figure, key figures, Dashboard
 :id: CPZCUGB
-:author: team-order-core, team-bi
+:author: team-order-core, team-app-bi
 
 :key-figure: Average order value
 
