--- a/docs/en-gb/modules/business-decisions/pages/data-formats.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/data-formats.adoc
@@ -3,4 +3,4 @@
 :keywords: Raw data formats
 :description: Learn which data formats are available for the raw data export.
 :id: 9IQX4QW
-:author: team-bi
+:author: team-app-bi
