--- a/docs/en-gb/modules/business-decisions/pages/key-figures.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/key-figures.adoc
@@ -3,4 +3,4 @@
 :keywords: Key figure, key figure list, plentyBI key figures, plenty BI key figures
 :description: Here you'll find reference material for all of the key figures that are included in the plentyBI tool.
 :id: WGTAT45
-:author: team-bi
+:author: team-app-bi
