--- a/docs/en-gb/modules/business-decisions/pages/myview-dashboard.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/myview-dashboard.adoc
@@ -1,7 +1,7 @@
 = Dashboard
 :keywords: BI dashboard, plentyBI, plenty BI, business intelligence, create key figures, visualise key figures, reporting, tile, tiles, pie chart, pie charts, line graph, line graphs, bar chart, bar charts, heat map, heat maps, gauge chart, gauge charts, tree map
 :id: QPO2ICG
-:author: team-bi
+:author: team-app-bi
 
 In the constantly changing world of e-commerce, it is essential to keep an overview of the numbers and data of your online business. Thus, plentymarkets offers you a new dashboard that enables you to access the current key figures of your company and decide if further action is needed. Create your individual dashboard by combining various key figures, statistics, graph types and format options. The dashboard allows you to be as flexible and creative as you like.
 
