--- a/docs/en-gb/modules/business-decisions/pages/orderitemamounts.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/orderitemamounts.adoc
@@ -1,7 +1,7 @@
 = orderItemAmounts
 :keywords: orderItemAmounts, Report, Raw data
 :id: 7RD1PT0
-:author: team-order-core, team-bi
+:author: team-order-core, team-app-bi
 
 :dataFormat: pass:quotes[*orderItemAmounts*]
 :data: the monetary amounts for order items
