--- a/docs/en-gb/modules/business-decisions/pages/return-rate.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/return-rate.adoc
@@ -1,7 +1,7 @@
 = Return rate
 :keywords: Return rate, returns, return rate amount, quantity of returns, number of returns, Business Intelligence, BI, statistics, key figure, key figures, Dashboard
 :id: O7KBCB0
-:author: team-order-core, team-bi
+:author: team-order-core, team-app-bi
 
 :key-figure: Return rate
 
