--- a/docs/en-gb/modules/data/pages/statistics.adoc
+++ b/docs/en-gb/modules/data/pages/statistics.adoc
@@ -2,7 +2,7 @@
 :keywords: Statistic, export statistic, contribution margin 1, contribution margin 2, contribution margin I, contribution margin II, contribution margins, process statistic, orders statistic, item statistic, warehouse statistic, customer statistic, visitor statistic, revenue statistic, return reason statistic, top, tops, flop, flops, analyse statistic, export statistic, manage statistic
 :description: Learn how to use the statistics module in plentymarkets.
 :id: MSLDK1U
-:author: team-bi
+:author: team-app-bi
 
 
 [IMPORTANT]
