limango plugin: main client

--- a/docs/de-de/modules/maerkte/pages/limango.adoc
+++ b/docs/de-de/modules/maerkte/pages/limango.adoc
@@ -62,6 +62,7 @@ Nachdem du das Plugin installiert und eingerichtet hast, stehen die in <<#datena
 Um limango in plentymarkets nutzen zu können, installiere zuerst das link:https://marketplace.plentymarkets.com/limango_7023[limango-Plugin^] in deinem plentymarkets System. Dieses und andere Plugins findest du im link:https://marketplace.plentymarkets.com/[plentyMarketplace^].
 
 :plugin: limango
+:main-client:
 include::partial$plugin-installation.adoc[]
 
 [#300]
