--- a/docs/en-gb/modules/markets/pages/limango.adoc
+++ b/docs/en-gb/modules/markets/pages/limango.adoc
@@ -62,6 +62,7 @@ After installing and setting up the plugin, the automatic processes described in
 To connect to limango in plentymarkets, first install the link:https://marketplace.plentymarkets.com/en/limango_7023[limango plugin^] in your plentymarkets system. You can download this and other plugins in the link:https://marketplace.plentymarkets.com/en[plentyMarketplace^].
 
 :plugin: limango
+:main-client:
 include::partial$plugin-installation.adoc[]
 
 [#300]
