--- a/docs/de-de/modules/changelog/pages/2022-08-24.adoc
+++ b/docs/de-de/modules/changelog/pages/2022-08-24.adoc
@@ -1,11 +1,12 @@
-= Changelog 17. August 2022
+= Changelog 24. August 2022
 :author: kevin-stederoth
 :sectnums!:
 :page-index: false
-:startWeekDate: 11. August 2022
-:endWeekDate: 17. August 2022
+:page-aliases: ROOT:changelog.adoc
+:startWeekDate: 18. August 2022
+:endWeekDate: 24. August 2022
 
-// Ab diesem Eintrag weitermachen: https://forum.plentymarkets.com/t/plentybi-verwendung-von-kennzahlen-einsehen-view-usage-of-key-figures/691488
+// Ab diesem Eintrag weitermachen: LINK EINFÜGEN
 
 Erfahre, was sich in der Woche vom {startWeekDate} bis zum {endWeekDate} bei plentymarkets getan hat. Im Folgenden findest du alle Changelog-Einträge der letzten Woche für stable- und early-Systeme.
 
@@ -20,47 +21,6 @@ stable::
 --
 
 :version: stable
-
-[discrete]
-== Neu
-
-Folgende Neuerungen wurden in den letzten 7 Tagen auf *{version}* veröffentlicht.
-
-[discrete]
-=== Aufträge
-
-* Der Filter *Datumstyp* wurde um das Lieferdatum erweitert.
-
-'''
-
-[discrete]
-== Behoben
-
-Folgende Probleme wurden in den letzten 7 Tagen auf *{version}* behoben.
-
-[discrete]
-=== Amazon
-
-* Der nächtliche Backup-Auftragsimport ignorierte seid der Umstellung auf SP-API die Einstellung *Startdatum Auftragsimport*. Der Auftragsimport wurde zwar nicht gestartet, wenn das Datum in der Zukunft lag, es konnte aber dazu kommen, dass Aufträge vor dem Datum importiert wurden, wenn diese nach dem Startdatum bei Amazon aktualisiert wurden. Dies wurden jetzt ausgeschlossen.
-* Beim Import von Gutschriften über VCS-Berichte konnte es in seltenen Fällen dazu kommen, dass eine Gutschrift doppelt importiert wurde, weil beim Abgleich, ob die Gutschrift bereits vorliegt, keine Gutschrift gefunden werden konnte. Dies hing damit zusammen, dass für diese Prüfung auf einen ES-Index zugegriffen wird, der sich zwar innerhalb von wenigen Minuten aktualisiert, es aber bei kurz aufeinander folgenden Importversuchen der gleichen Gutschrift zu diesem Problem kommen konnte, da diese im Index dann noch fehlen konnte.
-
-[discrete]
-=== CRM
-
-* Wenn man im EmailBuilder in den Feldern *Antwort an*, *CC* und *BCC* E-Mail-Adressen eingegeben hat und die Vorlage speichern wollte, war dies nicht möglich. Es wurde in den 3 Feldern die Fehlermeldung angezeigt, dass die E-Mail-Adressen ungültig sind, obwohl sie korrekt waren. Dieses Verhalten wurde behoben.
-
-[discrete]
-=== Dynamischer Export
-
-* Beim Versuch, einen Export über den Dynamischen Export durchzuführen, trat ein Fehler auf. Dieses Verhalten wurde behoben.
-
---
-
-early::
-+
---
-
-:version: early
 
 [discrete]
 == Neu
@@ -114,6 +74,39 @@ Folgende Probleme wurden in den letzten 7 Tagen auf *{version}* behoben.
 
 --
 
+early::
++
+--
+
+:version: early
+
+[discrete]
+== Neu
+
+Folgende Neuerungen wurden in den letzten 7 Tagen auf *{version}* veröffentlicht.
+
+
+
+'''
+
+[discrete]
+== Geändert
+
+Folgende Änderungen wurden in den letzten 7 Tagen auf *{version}* veröffentlicht.
+
+
+
+'''
+
+[discrete]
+== Behoben
+
+Folgende Probleme wurden in den letzten 7 Tagen auf *{version}* behoben.
+
+
+
+--
+
 Plugin-Updates::
 +
 --
@@ -124,49 +117,9 @@ Folgende Plugins wurden in den letzten 7 Tagen in einer neuen Version auf plenty
 |===
 |Plugin-Name |Version |To-do
 
-|link:https://marketplace.plentymarkets.com/itemavailabilityinfo_6962[Artikelverfügbarkeit Info^]
-|1.7.0
-|-
-
-|link:https://marketplace.plentymarkets.com/conradextension_6948[Conrad^]
-|1.2.1
-|-
-
-|link:https://marketplace.plentymarkets.com/dhlshipping_4871[DHL Shipping (Versenden)^]
-|3.1.21
-|-
-
-|link:https://marketplace.plentymarkets.com/dhlwunschpaket_5435[DHL Wunschzustellung^]
-|1.1.14
-|-
-
-|link:https://marketplace.plentymarkets.com/emarketing_6198[emarketing - Google Shopping, Microsoft Advertising, Facebook Ads & Instagram^]
-|1.1.8
-|-
-
-|link:https://marketplace.plentymarkets.com/etsy_4689[Etsy^]
-|2.1.30
-|-
-
-|link:https://marketplace.plentymarkets.com/cfourceresfashion5_6864[Fashion Theme^]
-|5.2.0
-|-
-
-|link:https://marketplace.plentymarkets.com/mytoys_54776[MyToys^]
-|1.0.38
-|-
-
-|link:https://marketplace.plentymarkets.com/paypal_4690[PayPal Checkout^]
-|6.0.15
-|-
-
-|link:https://marketplace.plentymarkets.com/voelknerextension_6949[Voelkner^]
-|1.2.1
-|-
-
-|link:https://marketplace.plentymarkets.com/wwtransporttrackingnumbertoparentorder_55032[WW-Versandinformation-an-Hauptauftrag^]
-|1.0.3
-|-
+|
+|
+|
 
 |===
 
