main client plugin installation

--- a/docs/en-gb/modules/markets/partials/plugin-installation.adoc
+++ b/docs/en-gb/modules/markets/partials/plugin-installation.adoc
@@ -1,3 +1,5 @@
+ifdef::main-client[*_Important:_* Install the plugin of the plugin set of the main client.]
+
 [.collapseBox]
 .*{plugin}*: Adding and installing the plugin
 --
