--- a/docs/de-de/modules/fulfillment/pages/package-content-list-2-0.adoc
+++ b/docs/de-de/modules/fulfillment/pages/package-content-list-2-0.adoc
@@ -61,14 +61,25 @@ image::fulfillment:package-content-list-search-field-example.png[width=640, heig
 .Filteroptionen in der Paketinhaltsliste
 [cols="1,3"]
 |====
-|Einstellung |Erläuterung
+|Filter |Erläuterung
 
-|*ID*
+| *ID*
 |Gib die Auftrags-ID ein.
 
-|*Paketzustand*
-|Wähle den Paketzustand aus der Dropdown-Liste.
+| *Packzustand*
+|Wähle den Packzustand aus der Dropdown-Liste. +
+Verfügbare Optionen: *Alle*, *Verpackt* und *Unverpackt*.
+
+| *Auftragsdatum*
+|Wähle ein Datum aus dem Kalender (material:today[]) und einen Operator aus der linken Dropdown-Liste. +
+
+*Ist Gleich* (=): Die Suchergebnisse liefern nur Aufträge mit exakt diesem Datum. +
+*Kleiner als oder gleich* (<=): Die Suchergebnisse liefern nur Aufträge, deren Datum kleiner oder gleich dem eingegebenen Wert ist. +
+*Größer als oder gleich* (>=): Die Suchergebnisse liefern nur Aufträge, deren Datum größer oder gleich dem eingegebenen Wert ist. +
+*Liegt zwischen* ([]): Die Suchergebnisse liefern nur Aufträge, deren Datum zwischen den eingegebenen Werten liegt.
 |====
+
+// TODO: Operatoren auch für die ID und den Paketzustand ergänzen.
 
 [#aktuellen-filter-speichern]
 === Aktuellen Filter speichern
@@ -173,7 +184,7 @@ Wenn du in der Übersicht der Paketinhaltsliste 2.0 einen Auftrag wählst (mater
 |====
 |Bedienelement |Erläuterung
 
-2+^|*Gruppenfunktionen in der Auftragsübersicht*
+2+^| *Gruppenfunktionen in der Auftragsübersicht*
 
 | material:receipt_long[] *CSV-Datei exportieren*
 |Exportiert die Inhalte der gewählten Aufträge als CSV-Datei.
@@ -192,7 +203,7 @@ Wenn du in der Übersicht der Paketinhaltsliste 2.0 einen Auftrag wählst (mater
 | material:delete[] *Alle Pakete löschen*
 |Löscht alle Pakete der gewählten Aufträge.
 
-2+^|*Gruppenfunktionen in der Detailansicht eines Auftrags*
+2+^| *Gruppenfunktionen in der Detailansicht eines Auftrags*
 
 | material:dynamic_feed[] *Schnelles Packen*
 |Ermöglicht das gleichzeitige Packen mehrerer Pakete im Auftrag.
@@ -281,25 +292,25 @@ Palette erstellen:
 |====
 |Einstellung |Erläuterung
 
-|*Höhe (cm)*
+| *Höhe (cm)*
 |Gib die Höhe der Palette ein.
 
-|*Breite (cm)*
+| *Breite (cm)*
 |Gib die Breite der Palette ein.
 
-|*Länge (cm)*
+| *Länge (cm)*
 |Gib die Länge der Palette ein.
 
-|*Individuelles Palettengewicht (kg)*
+| *Individuelles Palettengewicht (kg)*
 |Gib das individuelle Gewicht der Palette ein.
 
-|*Palette ist stapelbar*
+| *Palette ist stapelbar*
 |Aktiviere diese Option, wenn die Palette stapelbar ist.
 
-|*Zusätzliche Informationen*
+| *Zusätzliche Informationen*
 |Gib optional zusätzliche Informationen ein.
 
-|*Barcode*
+| *Barcode*
 |Gib den Barcode der Palette ein.
 |====
 
@@ -402,13 +413,13 @@ Paket erstellen:
 |====
 |Einstellung |Erläuterung
 
-|*Pakettyp*
+| *Pakettyp*
 |Wähle einen Pakettyp aus der Dropdown-Liste.
 
-|*Typ der Verpackungseinheit*
+| *Typ der Verpackungseinheit*
 |Wähle den Typ der Verpackungseinheit aus der Dropdown-Liste.
 
-|*Paketgewicht (kg)*
+| *Paketgewicht (kg)*
 |Gib das Paketgewicht ein.
 |====
 
@@ -512,28 +523,28 @@ Schnelles Packen verwenden:
 |====
 |Einstellung |Erläuterung
 
-|*Pakettyp*
+| *Pakettyp*
 |Wähle den Pakettyp aus der Dropdown-Liste.
 
-|*Typ der Verpackungseinheit*
+| *Typ der Verpackungseinheit*
 |Wähle den Typ der Verpackungseinheit aus der Dropdown-Liste.
 
-|*Paketgewicht (kg)*
+| *Paketgewicht (kg)*
 |Gib das Paketgewicht ein.
 
-|*Artikel zu verpacken*
+| *Artikel zu verpacken*
 |Gib die Anzahl der Artikel ein, die verpackt werden sollen.
 
-|*Artikel pro Paket*
+| *Artikel pro Paket*
 |Gib die Anzahl der Artikel ein, die jeweils in 1 Paket gepackt werden sollen.
 
-|*Anzahl der Pakete*
+| *Anzahl der Pakete*
 |Gib die Anzahl der Pakete ein, die gepackt werden sollen.
 
-|*Gesamtgewicht der Pakete (kg)*
+| *Gesamtgewicht der Pakete (kg)*
 |Gib das Paketgewicht insgesamt ein.
 
-|*Paketvolumen (cm³)*
+| *Paketvolumen (cm³)*
 |Gib das Paketvolumen ein.
 
 |====
@@ -582,16 +593,16 @@ Paket konfigurieren:
 [cols="1,3"]
 |====
 
-|*Pakettyp*
+| *Pakettyp*
 |Wähle einen Pakettyp aus der Dropdown-Liste.
 
-|*Typ der Verpackungseinheit*
+| *Typ der Verpackungseinheit*
 |Wähle den Typ der Verpackungseinheit aus der Dropdown-Liste.
 
-|*Paketgewicht (kg)*
+| *Paketgewicht (kg)*
 |Gib das Paketgewicht ein.
 
-|*Paketvolumen (cm³)*
+| *Paketvolumen (cm³)*
 |Gib das Paketvolumen ein.
 |====
 
