--- a/docs/de-de/modules/maerkte/pages/best-practice-mytoys-teilstornierung.adoc
+++ b/docs/de-de/modules/maerkte/pages/best-practice-mytoys-teilstornierung.adoc
@@ -25,6 +25,16 @@ Lieferauftrag erstellen:
 . Klicke anschließend auf *Lieferauftrag anlegen* (terra:execute[]). +
 → Der Lieferauftrag wird angelegt.
 
+Lieferauftrag muss man bei Teilstornierungen immer erstellen (alle Pos, die storbiert werden sollen)
+-> Lieferauftrag macht nur Sinn, wenn nicht alle Positionen storniert werden sollen
+
+Filter und Ereignisse sind nur Beispiele zum Eirnichten, richtet sich nach dem Workflow des Kunden
+
+hinweis: mit den vorgeschlagegnen filtern werden auch im Hauptauftrag alle Pos als storniert gekennezichent, wenn der Staus storniert gewählt wird
+
+
+
+
 [#ereignisaktion-teilstornierung]
 == Ereignisaktion einrichten
 
@@ -56,3 +66,24 @@ include::_includes:partial$event-procedure.adoc[]
 | *Plugins*
 | *Auftragsstornierung an MyToys melden*
 |===
+
+
+
+auftrag mit 2 positionen
+
+eine davon soll versendet werden, eine davon nicht
+
+ea wird auf kompletten auftrag versendet, deswegen muss man einen lieferauftrag erstellen
+
+lieferauftrag manuell erstellen -> zu dem hauptauftrag wird ein lieferauftrag erstellt
+
+EA: Lieferauftrag als versendet markieren
+
+entweder EA für Lieferaufträge, Typ Lieferauftrag
+
+
+
+_oder_
+
+Hauptauftrag nicht in Status verschieben, welcher Ereignisaktion triggert
+
