--- a/docs/de-de/modules/maerkte/pages/best-practice-mytoys-teilstornierung.adoc
+++ b/docs/de-de/modules/maerkte/pages/best-practice-mytoys-teilstornierung.adoc
@@ -55,12 +55,8 @@ include::_includes:partial$event-procedure.adoc[]
 | Status wählen, zum Beispiel *[8] Storniert*
 
 | *Filter 1*
-| *Auftrag > Auftragstyp*
-| *Lieferauftrag*
-
-| *Filter 2*
 | *Auftrag > Herkunft*
-| *myToys*
+| *MyToys*
 
 | *Aktion*
 | *Plugins*
