--- a/docs/de-de/modules/auftraege/pages/manually-create-orders.adoc
+++ b/docs/de-de/modules/auftraege/pages/manually-create-orders.adoc
@@ -122,7 +122,7 @@ Standardeinstellungen vornehmen:
 
 |[#intable-endpoint-after-completion]*Endpunkt nach Abschluss eines Auftrags*
 |Wähle, wohin du nach Abschluss einer Auftragsanlage geleitet werden möchtest. Du kannst wählen zwischen: +
-*Auftragsübersicht des Kontakts* = Leitet dich zur Auftragsübersicht im Kontaktdatensatz des Kontakts des gerade erstellten Auftrags. Dies ist die Standardeinstellung. +
+*Aktuelle Ansicht* = Leitet dich zur aktuellen Ansicht des erstellten Auftrags. Dies ist die Standardeinstellung. +
 *Auftragsübersicht* = Leitet dich zur allgemeinen Auftragsübersicht weiter. +
 *Detailansicht des neuen Auftrags* = Leitet dich zur Detailansicht des gerade erstellten Auftrags.
 
