--- a/docs/de-de/modules/business-entscheidungen/pages/SPoCC.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/SPoCC.adoc
@@ -175,16 +175,28 @@ Du gibst also deine Zugangsdaten ein, damit plentymarkets und SPoCC miteinander 
 |===
 |Einstellung |Erläuterung
 
-| *API Key*
-| Gib den API-Schlüssel ein, den du von SPoCC erhalten hast.
+| *Global Stock API Key* +
+(Pflichtfeld)
+| Gib den Schlüssel für die Global Stock API ein, den du von SPoCC erhalten hast.
 
-| *Retailer ID*
+| *Transaction Service API Key* +
+(Pflichtfeld)
+| Gib den Schlüssel für die Transaction Service API ein, den du von SPoCC erhalten hast.
+
+| *Content Article API Key* +
+(Pflichtfeld)
+| Gib den Schlüssel für die Content Article API ein, den du von SPoCC erhalten hast.
+
+| *Retailer ID* +
+(Pflichtfeld)
 | Gib die Händler:innen-ID ein, die du von SPoCC erhalten hast.
 
-| *Kundennummer*
+| *Kundennummer* +
+(Pflichtfeld)
 | Gib deine SPoCC-Kundennummer ein.
 
-| *Channel ID*
+| *Channel ID* +
+(Pflichtfeld)
 | Gib die Channel-ID ein, die du von SPoCC erhalten hast.
 |===
 
@@ -200,20 +212,19 @@ Das heißt, wo die Daten in plentymarkets gespeichert werden sollen.
 |===
 |Einstellung |Erläuterung
 
-2+^| Standardkategorie
+| *Vollständiger Artikelimport*
+| Aktiviere diese Option, um den vollständigen Artikelimport zu aktivieren.
 
-| *Standard Artikelkategorie*
-|Stell dir vor, du hast eine neue SPoCC-Warengruppe erstellt.
+| *Standardkategorie*
+| Stell dir vor, du hast eine neue SPoCC-Warengruppe erstellt.
 Du hast aber vergessen, die Warengruppe einer Kategorie in plentymarkets zuzuordnen.
-Wenn Artikel aus der nicht zugeordneten Warengruppe importiert werden, landen sie in der Standardkategorie.
+Wenn Artikel aus der nicht zugeordneten Warengruppe importiert werden, landen sie in der Standardkategorie, die du hier festlegst.
 
 *_Voraussetzung_*: Hast du schon xref:artikel:kategorien.adoc#[Kategorien in plentymarkets erstellt]?
 Diese Dropdown-Liste enthält nur die Kategorien, die schon in plentymarkets vorhanden sind.
 
-2+^| Barcode
-
 | *Barcode*
-|Welcher plentymarkets Barcode-Typ passt zu deinem SPoCC-Barcode?
+| Welcher plentymarkets Barcode-Typ passt zu deinem SPoCC-Barcode?
 Wähle den Barcode-Typ aus der Dropdown-Liste.
 
 *_Voraussetzung_*: Hast du schon xref:artikel:barcodes.adoc#100[Barcode-Typen in plentymarkets konfiguriert]?
@@ -222,14 +233,14 @@ Diese Dropdown-Liste enthält nur die Barcode-Typen, die schon in plentymarkets 
 2+^| Attribute
 
 | *Farbattribut*
-|Welches plentymarkets Attribut passt zu deinem SPoCC-Farbattribut?
+| Welches plentymarkets Attribut passt zu deinem SPoCC-Farbattribut?
 Wähle das Attribut aus der Dropdown-Liste.
 
 *_Voraussetzung_*: Hast du schon xref:artikel:attribute.adoc#[Attribute in plentymarkets konfiguriert]?
 Diese Dropdown-Liste enthält nur die Attribute, die schon in plentymarkets vorhanden sind.
 
 | *Größe*
-|Welches plentymarkets Attribut passt zu deiner SPoCC-Größe?
+| Welches plentymarkets Attribut passt zu deiner SPoCC-Größe?
 Wähle das Attribut aus der Dropdown-Liste.
 
 *_Voraussetzung_*: Hast du schon xref:artikel:attribute.adoc#[Attribute in plentymarkets konfiguriert]?
@@ -252,21 +263,21 @@ In SPoCC gibt es drei Preise:
 |Einstellung |Erläuterung
 
 | *Verkaufspreis*
-|Welchen plentymarkets Verkaufspreis möchtest du für den Verkaufspreis in SPoCC verwenden?
+| Welchen plentymarkets Verkaufspreis möchtest du für den Verkaufspreis in SPoCC verwenden?
 Wähle den passenden plentymarkets Verkaufspreis aus der Dropdown-Liste.
 
 *_Voraussetzung_*: Hast du schon xref:artikel:preise.adoc#[Verkaufspreise in plentymarkets eingerichtet]?
 Diese Dropdown-Liste enthält nur die Verkaufspreise, die schon in plentymarkets vorhanden sind.
 
 | *Zielpreis*
-|Welchen plentymarkets Verkaufspreis möchtest du für den Zielpreis in SPoCC verwenden?
+| Welchen plentymarkets Verkaufspreis möchtest du für den Zielpreis in SPoCC verwenden?
 Wähle den passenden plentymarkets Verkaufspreis aus der Dropdown-Liste.
 
 *_Voraussetzung_*: Hast du schon xref:artikel:preise.adoc#[Verkaufspreise in plentymarkets eingerichtet]?
 Diese Dropdown-Liste enthält nur die Verkaufspreise, die schon in plentymarkets vorhanden sind.
 
 | *Unverbindlicher Verkaufspreis*
-|Welchen plentymarkets Verkaufspreis möchtest du für den unverbindlichen Verkaufspreis in SPoCC verwenden?
+| Welchen plentymarkets Verkaufspreis möchtest du für den unverbindlichen Verkaufspreis in SPoCC verwenden?
 Wähle den passenden plentymarkets Verkaufspreis aus der Dropdown-Liste.
 
 *_Voraussetzung_*: Hast du schon xref:artikel:preise.adoc#[Verkaufspreise in plentymarkets eingerichtet]?
@@ -281,11 +292,13 @@ Ordne deinen SPoCC-Attributen in diesem Schritt deshalb plentymarkets Eigenschaf
 
 // TODO: Erklären, was Attribute bei SPoCC sind.
 
+. Klicke ganz rechts auf icon:plus[].
 . Wähle aus der Dropdown-Liste *plentymarkets Eigenschaft* links eine Eigenschaft. +
 *_Voraussetzung_*: Hast du schon xref:artikel:eigenschaften.adoc#[Eigenschaften in plentymarkets konfiguriert]?
 Diese Dropdown-Liste enthält nur die Eigenschaften, die schon in plentymarkets vorhanden sind.
 . Wähle aus der Dropdown-Liste *SPoCC-Attribut* rechts ein Attribut. +
 → Die beiden Datensätze werden einander zugeordnet.
+. Ordne weitere Eigenschaften genauso zu.
 
 [[table-property-mapping]]
 .Zuordnung der Eigenschaften
@@ -353,8 +366,8 @@ Auf diese Weise kannst du eine nicht mehr benötigte Zuordnung löschen.
 .Alternativer Ablauf ohne Kategoriezuordnung
 ====
 Technisch gesehen kannst du auch nur eine Standard-Artikelkategorie wählen und den Rest der Kategoriezuordnung überspringen.
-Als Folge würden deine Artikel beim Import immer nur in der Standardkategorie landen.
-Bei Bedarf musst du dann manuell Artikel in andere plentymarkets Kategorien verschieben.
+Als Folge landen deine Artikel beim Import immer nur in der Standardkategorie.
+Bei Bedarf musst du dann Artikel manuell in andere plentymarkets Kategorien verschieben.
 ====
 
 [#warehouse-mapping]
@@ -369,12 +382,19 @@ In diesem Schritt ordnest du deine Channel Store Number von SPoCC deinen plentym
 |Einstellung |Erläuterung
 
 | *SPoCC Channel Store Number*
-|Dies sind die Lager in SPoCC.
+| Dies sind deine Lager in SPoCC.
 Wähle die passende Channel Store Number aus der Dropdown-Liste.
 
 | *plentymarkets Lager*
-| Dies sind die Lager im plentymarkets Menü *Einrichtung » Waren » Lager*.
+| Dies sind deine Lager im plentymarkets Menü *Einrichtung » Waren » Lager*.
 
+| icon:plus[role="green"]
+| Fügt eine weitere Zeile hinzu.
+Auf diese Weise kannst du mehrere Lager zuordnen.
+
+| icon:minus-circle[role="red"]
+| Löscht eine Zeile.
+Auf diese Weise kannst du eine nicht mehr benötigte Zuordnung löschen.
 |===
 
 [#cron-settings]
