--- a/docs/de-de/modules/business-entscheidungen/pages/prohandel.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/prohandel.adoc
@@ -593,7 +593,7 @@ Diese Dropdown-Liste enthält nur die Verkaufspreise, die schon in plentymarkets
 | *Von*; +
 *Bis*
 |In welchem Zeitraum soll dieser Verkaufspreis gelten?
-Wähle die Von- und Bis-Daten aus den Dropdown-Listen aus.
+Wähle die Eigenschaften aus den Dropdown-Listen, mit denen du das Startdatum und das Enddatum von Aktionspreisen an der Variante speicherst.
 
 *_Voraussetzung_*: Hast du schon xref:artikel:eigenschaften.adoc#[Eigenschaften in plentymarkets konfiguriert]?
 Diese Dropdown-Liste enthält nur die Eigenschaften, die schon in plentymarkets vorhanden sind.
