--- a/docs/en-gb/modules/item/pages/images.adoc
+++ b/docs/en-gb/modules/item/pages/images.adoc
@@ -58,6 +58,8 @@ Use the drop-down list to specify which identifier the image file names contain.
 
 This area relates to placeholder images. If an item does not have its own image, then the placeholder image will be displayed instead.
 
+//tag::itemimages-placeholder[]
+
 [cols="1,3"]
 |====
 |Setting |Explanation
@@ -74,6 +76,8 @@ a|This placeholder image appears if preview images cannot be displayed.
 . Upload your preferred placeholder image in the menu *CMS » Webspace*.
 . Then enter the URL for the placeholder image here.
 |====
+
+//end::itemimages-placeholder[]
 
 [#130]
 === Attribute images
@@ -229,8 +233,13 @@ After you invalidate the cache, each image size is created on the fly when the i
 [#200]
 == Personalising image URLs
 
-By default, image URLs contain the domain name `plentymarkets.com`.
+//tag::personalise-itemimage-urls-preamble[]
+
+By default, image URLs have a standard CDN domain name.
 But it’s possible to use your own domain and subdomain instead.
+
+//end::personalise-itemimage-urls-preamble[]
+
 The table compares the default CDN domain and a custom CDN domain.
 
 [cols="1,3,3"]
