--- a/docs/en-gb/modules/item/pages/inheritance.adoc
+++ b/docs/en-gb/modules/item/pages/inheritance.adoc
@@ -8,9 +8,13 @@
 zuletzt bearbeitet 09.04.2021
 ////
 
+//ToDo - when you rework this page, also rework the preamble and make sure it also answers the question on the item faq page
+
+//tag::inheritance-preamble[]
 An item’s xref:item:structure.adoc#300[main variation] differs from its other variations. The main variation can pass data on, i.e. other variations can inherit its data. As such, the main variation is a parent variation that passes on settings to its children.
 
 By default, this inheritance function is active. When a new variation is created, this variation inherits settings from the main variation, as long as no other data is saved.
+//end::inheritance-preamble[]
 
 [#100]
 == Types of inheritance
