--- a/docs/en-gb/modules/item/pages/properties.adoc
+++ b/docs/en-gb/modules/item/pages/properties.adoc
@@ -390,13 +390,19 @@ So think carefully before you delete properties. Make sure that you no longer ne
 .*How many properties can I create at most?*
 --
 
+//tag::faq-maximum-properties[]
+
 You can create up to 500 variation properties and link them to variations.
+
+//end::faq-maximum-properties[]
 
 --
 
 [.collapseBox]
 .*I don’t see my property in the item data record. Where is it?*
 --
+
+//tag::faq-where-link-properties[]
 
 Properties are linked in a different tab depending on their type.
 Open the item data record and click on the tab *Properties* or *Texts* in the lower row. Which tab depends on the property type.
@@ -420,25 +426,15 @@ Character string
 |xref:item:import-export-create-directory.adoc#4800[Tab: Properties]
 |===
 
+//end::faq-where-link-properties[]
+
 --
 
 [.collapseBox]
 .*Characteristics, properties and attributes: what’s the difference?*
 --
 
-* xref:item:properties.adoc#100[Characteristics] describe entire items.
-For example, if an item is available in red, blue or green, then the characteristic will apply to all three variations.
-Characteristics aren’t very flexible, they’re outdated and they’re gradually being replaced by properties.
-//Therefore, we recommend that you already start turning your characteristics into properties.
-* xref:item:properties.adoc#500[Properties] describe specific variations.
-For example, if an item is available in red, blue or green, then the property can apply to one, two or all three of the variations.
-Therefore, properties are much more flexible.
-* xref:item:attributes.adoc#[Attributes], for example, are the various colours and sizes that your products are available in.
-Attributes help you simultaneously characterise your products and create saleable variations, e.g. a t-shirt in the colour red and the size S.
-
-//lass drin, könnte hilfreich sein als Erklärung Eigenschaft vs Attribute nachdem die Merkmale wegfallen
-//Characteristics and properties are passive features of an item. That means they are not linked to stock.
-//Attributes, on the other hand, are used to generate saleable variations that can all have different stock levels. For example, the red variation might be sold out but the blue one is still available.
+include::page$attributes.adoc[tag=faq-attribute-property-characteristic]
 
 --
 
@@ -446,9 +442,13 @@ Attributes help you simultaneously characterise your products and create saleabl
 .*Can I also use properties to characterise storage locations and contacts?*
 --
 
+//tag::faq-property-types[]
+
 Yes.
 Properties can also be used to characterise xref:crm:preparatory-settings.adoc#properties-introduction[contacts] or xref:stock-management:properties.adoc#[storage locations].
 Click on the links to learn more about these other use cases.
+
+//end::faq-property-types[]
 
 --
 
@@ -456,11 +456,20 @@ Click on the links to learn more about these other use cases.
 .*What are order properties?*
 --
 
-* In plentymarkets, personalised items are sold with the help of order properties.
-Example: Your customers should be able to upload a photo that is printed on a t-shirt.
-* Order properties are a special type of properties. Customers can choose them in the plentyShop and order them along with the product.
+//tag::faq-order-properties[]
 
-xref:item:personalised-items.adoc#[Further information about the procedure].
+Order properties are a special type of properties. Customers can choose them in the plentyShop and order them along with the product.
+
+With the help of order properties, you can:
+
+* sell personalised items in your plentyShop.
+Example: Your customers should be able to upload a photo that is printed on a t-shirt.
+* charge an extra fee for certain options.
+Example: For an extra fee, your customers could add gold or diamond trim to a wedding ring.
+
+xref:item:personalised-items.adoc#[Further information about order properties].
+
+//end::faq-order-properties[]
 
 --
 
@@ -468,6 +477,8 @@ xref:item:personalised-items.adoc#[Further information about the procedure].
 [.collapseBox]
 .*Can I create webshop filters based on properties?*
 --
+
+//tag::faq-properties-filters[]
 
 Yes. Imagine you’ve already:
 
@@ -478,6 +489,8 @@ For example, the Bluetooth property was linked to your Bluetooth compliant produ
 Now you can create filters.
 For example, so that your customers can filter for Bluetooth compliant products in plentyShop.
 xref:item:frontend-item-search.adoc#[Further information about the procedure].
+
+//end::faq-properties-filters[]
 
 --
 
