--- a/docs/de-de/modules/maerkte/pages/fruugo.adoc
+++ b/docs/de-de/modules/maerkte/pages/fruugo.adoc
@@ -318,7 +318,7 @@ Bereite nun deine Varianten vor.
 * *Automatisch sichtbar, wenn Netto-WB positiv*
 * *Automatisch unsichtbar, wenn kein Netto-WB*
 
-Diese Optionen findest du im Menü *Artikel » Variante » Tab: Einstellungen » Abschnitt: Verfügbarkeit » Einstellung: Mandant*. Wenn diese Optionen eingesetzt werden und der Warenbestand 0 ist, wird die Variante für das Plugin unsichtbar.
+Diese Optionen findest du im Menü *Artikel » Artikel bearbeiten » [Artikel öffnen] » [Variante öffnen] » Tab: Einstellungen » Abschnitt: Verfügbarkeit » Einstellung: Mandant*. Wenn diese Optionen eingesetzt werden und der Warenbestand 0 ist, wird die Variante für das Plugin unsichtbar.
 
 [#7173193990]
 === Variantenverfügbarkeit einstellen
@@ -333,19 +333,19 @@ include::partial$variantenverfuegbarkeit.adoc[]
 
 === Artikelvarianten aktivieren
 
-. Öffne das Menü *Artikel » Variante » Tab: Einstellungen*.
+. Öffne das Menü *Artikel » Artikel bearbeiten » [Artikel öffnen] » [Variante öffnen] » Tab: Einstellungen*.
 . Navigiere zum Abschnitt *Verfügbarkeit*.
 . Setze ein *Häkchen* bei *Aktiv*.
 . Speichere die Einstellungen.
 
 === Bild mit Variante und Marktplatz Fruugo verknüpfen
 
-. Öffne das Menü *Artikel » Bilder*.
-. Öffne Drop-Down *Verfügbarkeit*.
-. Wähle den *Mandanten* aus.
-. Wähle Herkunft *Fruugo* aus. +
-→ Das bild ist nun Exportbereit.
-. Öffne das Menü *Artikel » Variante » Bilder*.
+. Öffne das Menü *Artikel » Artikel bearbeiten » [Artikel öffnen] » Tab: Bilder*.
+. Klicke auf die Drop-Down-Liste *Verfügbarkeit*.
+. Wähle den *Mandanten*.
+. Wähle die Herkunft *Fruugo*. +
+→ Das Bild ist exportbereit.
+. Öffne das Menü *Artikel » Artikel bearbeiten » [Artikel öffnen] » [Variante öffnen] » Tab: Bilder*.
 . Bewege den Mauszeiger über das *Bild*.
 . Klicke auf *[√] Verknüpfen*. +
 → Das Bild ist mit der Variante verknüpft.
@@ -371,7 +371,7 @@ Der Warenbestand wird alle 15 Minuten exportiert. Für einen erfolgreichen Daten
 .Verfügbarkeit 1-10 auswählen
 --
 
-. Öffne das Menü *Artikel » Variante » Abschnitt: Verfügbarkeit*.
+. Öffne das Menü *Artikel » Artikel bearbeiten » [Artikel öffnen] » [Variante öffnen] » Abschnitt: Verfügbarkeit*.
 . Setze ein *Häkchen* von *1 - 10*. +
 → Die zu deiner Auswahl verlinkte *Durchschnittliche Lieferzeit* wird als Fruugo LeadTime exportiert.
 Werte für *Verfügbarkeit 1 bis 10* Werte werden im Menü *Einrichtung » Artikel » Verfügbarkeit » Durchschnittliche Lieferzeit* gespeichert.
@@ -555,6 +555,14 @@ Das Plugin wird sichtbar nachdem:
 - Das Plugin erfolgreich installiert, aktiviert und breitgestellt ist.
 - Die Auftragsherkunft *Fruugo* im Menü *Einrichtung » Auftrag » Auftragsherkunft* aktiv ist.
 
-*WICHTIG:* Das Plugin muss auf dem Plugin-Set installiert sein, dass mit dem *Standard-Mandanten* verknüpft ist.
+*_Wichtig:_* Das Plugin muss auf dem Plugin-Set installiert sein, dass mit dem *Standard-Mandanten* verknüpft ist.
 
 --
+
+////
+Weitere FAQ:
+* URL wird nicht automatisch übertragen.
+
+
+
+////
