--- a/docs/en-gb/modules/crm/pages/faq.adoc
+++ b/docs/en-gb/modules/crm/pages/faq.adoc
@@ -15,7 +15,7 @@ On this page, you can find questions and answers about the CRM area. We will con
 A customer calls you and informs you that his address has changed. You open the contact data record, search for the address and want to delete it. Why is this not possible? +
 If the address is linked with an order, you _cannot_ delete this address. This is related to the legal retention period in compliance with GoBD.
 
-To avoid that “old” addresses of your contacts are used by mistake when manually creating an order, the new address has to be set as primary invoice and delivery address. Once this setting has been carried out, this new primary address will be shown by default both when creating a new order in your plentymarkets back end and in your online shop.
+To avoid that “old” addresses of your contacts are used by mistake when manually creating an order, the new address has to be set as primary invoice and delivery address. Once this setting has been carried out, this new primary address will be shown by default when creating a new order in your plentymarkets back end.
 
 *_Note:_* Your customer is able to delete the old address or to edit existing addresses in his My account area. These addresses are, however, not completely removed or synchronised with your plentymarkets back end. This is why the addresses are still visible in your plentymarkets system.
 --
