--- a/docs/de-de/modules/maerkte/pages/fruugo.adoc
+++ b/docs/de-de/modules/maerkte/pages/fruugo.adoc
@@ -4,6 +4,11 @@
 :description: Multi-Channel in plentymarkets: Richte die Schnittstelle zum Marktplatz Fruugo in deinem plentymarkets System ein.
 :id: SSHUJMD
 
+:market: Fruugo
+:fruugo:
+
+// Am 24/10/2022 von Plugin-Beschreibung ins Handbuch umgezogen.
+
 link:https://sell.fruugo.com/[Fruugo^] ist ein globaler Marktplatz, auf dem Kund:innen in ihrer Landessprache und Landeswährung einkaufen können. Artikelbeschreibungen werden automatisch in die Landessprachen übersetzt und in die Landeswährung umgerechnet, damit du deine internationale Präsenz ohne großen zeitlichen und finanziellen Aufwand ausbauen kannst.
 
 [#100]
