--- a/docs/en-gb/modules/markets/pages/fruugo.adoc
+++ b/docs/en-gb/modules/markets/pages/fruugo.adoc
@@ -4,6 +4,9 @@
 :description: Multi-Channel in plentymarkets: Set up the interface to the market Fruugo in your plentymarkets system.
 :id: SSHUJMD
 
+:market: Fruugo
+:fruugo:
+
 link:https://sell.fruugo.com/[Fruugo^] is a global market which allows customers to shop in their own country’s language and currency. Item descriptions are automatically translated into the target language and prices are converted into the local currency. This strengthens your international presence without major expenditure in terms of time or money.
 
 [#100]
